// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treeMapGenerator create Treemap nodes only root node 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 48,
      "y": 500,
      "z": -101,
    },
    "isLeaf": true,
    "length": 596,
    "link": undefined,
    "markingColor": null,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 48,
      "y": 500,
      "z": 197,
    },
    "path": "/root",
    "visible": true,
    "width": 596,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 83.13843876330611,
      "y": 2,
      "z": -83.43078061834694,
    },
    "isLeaf": false,
    "length": 666.2768775266122,
    "link": undefined,
    "markingColor": null,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 83.13843876330611,
      "y": 2,
      "z": 249.70765814495917,
    },
    "path": "/root",
    "visible": true,
    "width": 666.2768775266122,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#DDDDDD",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 83.13843876330606,
      "y": 4,
      "z": -73.83078061834698,
    },
    "isLeaf": true,
    "length": 627.8768775266121,
    "link": "http://www.google.de",
    "markingColor": null,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 83.13843876330606,
      "y": 4,
      "z": 240.1076581449591,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 627.8768775266121,
    "x0": 19.200000000000003,
    "y0": 19.200000000000003,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 406.6768775266122,
      "y": 502,
      "z": -73.83078061834698,
    },
    "isLeaf": true,
    "length": 627.8768775266121,
    "link": undefined,
    "markingColor": null,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 406.6768775266122,
      "y": 502,
      "z": 240.1076581449591,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 0,
    "x0": 656.6768775266122,
    "y0": 19.200000000000003,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children and some grand children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 117.57550765359252,
      "y": 2,
      "z": -66.21224617320374,
    },
    "isLeaf": false,
    "length": 735.151015307185,
    "link": undefined,
    "markingColor": null,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 117.57550765359252,
      "y": 2,
      "z": 301.3632614803888,
    },
    "path": "/root",
    "visible": true,
    "width": 735.151015307185,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#DDDDDD",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -56.61224617320377,
      "y": 4,
      "z": -61.412246173203755,
    },
    "isLeaf": true,
    "length": 338.7755076535925,
    "link": "http://www.google.de",
    "markingColor": null,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 291.76326148038873,
      "y": 4,
      "z": -61.412246173203755,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 696.751015307185,
    "x0": 19.200000000000003,
    "y0": 19.200000000000003,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -56.61224617320377,
      "y": 4,
      "z": 296.56326148038875,
    },
    "isLeaf": false,
    "length": 338.77550765359246,
    "link": undefined,
    "markingColor": null,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 291.76326148038873,
      "y": 4,
      "z": 296.56326148038875,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 696.751015307185,
    "x0": 19.200000000000003,
    "y0": 377.17550765359255,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#820E0E",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -119.56734770392222,
      "y": 6,
      "z": 221.4693845669907,
    },
    "isLeaf": true,
    "length": 300.37550765359236,
    "link": undefined,
    "markingColor": null,
    "name": "small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -119.56734770392222,
      "y": 6,
      "z": 371.65713839378685,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": true,
    "width": 184.06530459215554,
    "x0": 38.400000000000006,
    "y0": 396.3755076535926,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#DDDDDD",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 105.4367322709129,
      "y": 6,
      "z": 296.56326148038875,
    },
    "isLeaf": true,
    "length": 300.37550765359236,
    "link": undefined,
    "markingColor": null,
    "name": "other small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 332.97958762842757,
      "y": 6,
      "z": 296.56326148038875,
    },
    "path": "/root/Parent Leaf/other small leaf",
    "visible": true,
    "width": 455.08571071502945,
    "x0": 241.66530459215554,
    "y0": 396.3755076535926,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 456.351015307185,
      "y": 504,
      "z": 221.4693845669907,
    },
    "isLeaf": true,
    "length": 300.37550765359236,
    "link": undefined,
    "markingColor": null,
    "name": "empty folder",
    "outgoingEdgePoint": Vector3 {
      "x": 456.351015307185,
      "y": 504,
      "z": 371.65713839378685,
    },
    "path": "/root/Parent Leaf/empty folder",
    "visible": true,
    "width": 0,
    "x0": 706.351015307185,
    "y0": 396.3755076535926,
    "z0": 4,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes should build the tree map with valid coordinates using the fixed folder structure 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 929.3250516799595,
    "link": undefined,
    "markingColor": null,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 929.3250516799595,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -75.75155281000758,
      "y": 4,
      "z": -133.83436854000507,
    },
    "isLeaf": false,
    "length": 139.39875775199394,
    "link": undefined,
    "markingColor": null,
    "name": "folder_1",
    "outgoingEdgePoint": Vector3 {
      "x": 179.81283640198131,
      "y": 4,
      "z": -133.83436854000507,
    },
    "path": "/root/folder_1",
    "visible": true,
    "width": 511.1287784239778,
    "x0": 46.46625258399798,
    "y0": 46.46625258399798,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 2,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -55.88581891174769,
      "y": 504,
      "z": -197.06887749127185,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "markingColor": null,
    "name": "children_1",
    "outgoingEdgePoint": Vector3 {
      "x": 159.94710250372148,
      "y": 504,
      "z": -197.06887749127185,
    },
    "path": "/root/folder_1/children_1",
    "visible": true,
    "width": 431.66584283093835,
    "x0": 86.19772038051772,
    "y0": 52.93112250872814,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 4,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -55.88581891174769,
      "y": 504,
      "z": -197.06887749127185,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "markingColor": null,
    "name": "children_2",
    "outgoingEdgePoint": Vector3 {
      "x": 159.94710250372148,
      "y": 504,
      "z": -197.06887749127185,
    },
    "path": "/root/folder_1/children_2",
    "visible": true,
    "width": 431.66584283093835,
    "x0": 86.19772038051772,
    "y0": 52.93112250872814,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -55.88581891174769,
      "y": 504,
      "z": -197.06887749127185,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "markingColor": null,
    "name": "children_3",
    "outgoingEdgePoint": Vector3 {
      "x": 159.94710250372148,
      "y": 504,
      "z": -197.06887749127185,
    },
    "path": "/root/folder_1/children_3",
    "visible": true,
    "width": 431.66584283093835,
    "x0": 86.19772038051772,
    "y0": 52.93112250872814,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -87.36811595600707,
      "y": 4,
      "z": 98.49689437998484,
    },
    "isLeaf": false,
    "length": 464.6625258399798,
    "link": undefined,
    "markingColor": null,
    "name": "folder_2",
    "outgoingEdgePoint": Vector3 {
      "x": -87.36811595600707,
      "y": 4,
      "z": 330.8281572999747,
    },
    "path": "/root/folder_2",
    "visible": true,
    "width": 232.3312629199899,
    "x0": 46.46625258399798,
    "y0": 232.33126291998988,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -191.8732678385811,
      "y": 504,
      "z": 119.12212394256221,
    },
    "isLeaf": true,
    "length": 382.16160758967044,
    "link": undefined,
    "markingColor": null,
    "name": "children_4",
    "outgoingEdgePoint": Vector3 {
      "x": -191.8732678385811,
      "y": 504,
      "z": 310.20292773739743,
    },
    "path": "/root/folder_2/children_4",
    "visible": true,
    "width": 0,
    "x0": 58.12673216141889,
    "y0": 273.5817220451446,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 0,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -191.8732678385811,
      "y": 504,
      "z": 119.12212394256221,
    },
    "isLeaf": true,
    "length": 382.16160758967044,
    "link": undefined,
    "markingColor": null,
    "name": "children_5",
    "outgoingEdgePoint": Vector3 {
      "x": -191.8732678385811,
      "y": 504,
      "z": 310.20292773739743,
    },
    "path": "/root/folder_2/children_5",
    "visible": true,
    "width": 0,
    "x0": 58.12673216141889,
    "y0": 273.5817220451446,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 191.4293995479808,
      "y": 4,
      "z": 98.49689437998484,
    },
    "isLeaf": false,
    "length": 464.6625258399798,
    "link": undefined,
    "markingColor": null,
    "name": "folder_3",
    "outgoingEdgePoint": Vector3 {
      "x": 191.4293995479808,
      "y": 4,
      "z": 330.8281572999747,
    },
    "path": "/root/folder_3",
    "visible": true,
    "width": 232.3312629199899,
    "x0": 325.26376808798585,
    "y0": 232.33126291998988,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 4,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 86.92424766540677,
      "y": 504,
      "z": 119.12212394256221,
    },
    "isLeaf": true,
    "length": 382.16160758967044,
    "link": undefined,
    "markingColor": null,
    "name": "children_5",
    "outgoingEdgePoint": Vector3 {
      "x": 86.92424766540677,
      "y": 504,
      "z": 310.20292773739743,
    },
    "path": "/root/folder_3/children_5",
    "visible": true,
    "width": 0,
    "x0": 336.92424766540677,
    "y0": 273.5817220451446,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 0,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 86.92424766540677,
      "y": 504,
      "z": 119.12212394256221,
    },
    "isLeaf": true,
    "length": 382.16160758967044,
    "link": undefined,
    "markingColor": null,
    "name": "children_6",
    "outgoingEdgePoint": Vector3 {
      "x": 86.92424766540677,
      "y": 504,
      "z": 310.20292773739743,
    },
    "path": "/root/folder_3/children_6",
    "visible": true,
    "width": 0,
    "x0": 336.92424766540677,
    "y0": 273.5817220451446,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 400.5275361759717,
      "y": 4,
      "z": 5.564389211988868,
    },
    "isLeaf": false,
    "length": 836.3925465119636,
    "link": undefined,
    "markingColor": null,
    "name": "folder_4",
    "outgoingEdgePoint": Vector3 {
      "x": 400.5275361759717,
      "y": 4,
      "z": 423.76066246797063,
    },
    "path": "/root/folder_4",
    "visible": true,
    "width": 92.93250516799594,
    "x0": 604.0612835919737,
    "y0": 46.46625258399798,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 20,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 359.12236739451646,
      "y": 504,
      "z": 36.8952237531623,
    },
    "isLeaf": true,
    "length": 711.06920834727,
    "link": undefined,
    "markingColor": null,
    "name": "children_7",
    "outgoingEdgePoint": Vector3 {
      "x": 359.12236739451646,
      "y": 504,
      "z": 392.4298279267973,
    },
    "path": "/root/folder_4/children_7",
    "visible": true,
    "width": 0,
    "x0": 609.1223673945165,
    "y0": 109.1279216663448,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 359.12236739451646,
      "y": 504,
      "z": 36.8952237531623,
    },
    "isLeaf": true,
    "length": 711.06920834727,
    "link": undefined,
    "markingColor": null,
    "name": "children_8",
    "outgoingEdgePoint": Vector3 {
      "x": 359.12236739451646,
      "y": 504,
      "z": 392.4298279267973,
    },
    "path": "/root/folder_4/children_8",
    "visible": true,
    "width": 0,
    "x0": 609.1223673945165,
    "y0": 109.1279216663448,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 563.1594202199647,
      "y": 4,
      "z": 5.564389211988868,
    },
    "isLeaf": false,
    "length": 836.3925465119636,
    "link": undefined,
    "markingColor": null,
    "name": "folder_5",
    "outgoingEdgePoint": Vector3 {
      "x": 563.1594202199647,
      "y": 4,
      "z": 423.76066246797063,
    },
    "path": "/root/folder_5",
    "visible": true,
    "width": 139.3987577519939,
    "x0": 743.4600413439676,
    "y0": 46.46625258399798,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 500.84227394129766,
      "y": 504,
      "z": 36.8952237531623,
    },
    "isLeaf": true,
    "length": 711.06920834727,
    "link": undefined,
    "markingColor": null,
    "name": "children_9",
    "outgoingEdgePoint": Vector3 {
      "x": 500.84227394129766,
      "y": 504,
      "z": 392.4298279267973,
    },
    "path": "/root/folder_5/children_9",
    "visible": true,
    "width": 0,
    "x0": 750.8422739412977,
    "y0": 109.1279216663448,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 0,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 500.84227394129766,
      "y": 504,
      "z": 36.8952237531623,
    },
    "isLeaf": true,
    "length": 711.06920834727,
    "link": undefined,
    "markingColor": null,
    "name": "children_10",
    "outgoingEdgePoint": Vector3 {
      "x": 500.84227394129766,
      "y": 504,
      "z": 392.4298279267973,
    },
    "path": "/root/folder_5/children_10",
    "visible": true,
    "width": 0,
    "x0": 750.8422739412977,
    "y0": 109.1279216663448,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -75.75155281000758,
      "y": 4,
      "z": 563.1594202199647,
    },
    "isLeaf": false,
    "length": 139.3987577519939,
    "link": undefined,
    "markingColor": null,
    "name": "folder_6",
    "outgoingEdgePoint": Vector3 {
      "x": 179.81283640198131,
      "y": 4,
      "z": 563.1594202199647,
    },
    "path": "/root/folder_6",
    "visible": true,
    "width": 511.1287784239778,
    "x0": 46.46625258399798,
    "y0": 743.4600413439676,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "custom_metric": 1,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -53.576455584677035,
      "y": 504,
      "z": 500.84227394129766,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "markingColor": null,
    "name": "children_11",
    "outgoingEdgePoint": Vector3 {
      "x": 157.63773917665077,
      "y": 504,
      "z": 500.84227394129766,
    },
    "path": "/root/folder_6/children_11",
    "visible": true,
    "width": 422.4283895226556,
    "x0": 90.81644703465908,
    "y0": 750.8422739412977,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "custom_metric": 1,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -53.576455584677035,
      "y": 504,
      "z": 500.84227394129766,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "markingColor": null,
    "name": "children_12",
    "outgoingEdgePoint": Vector3 {
      "x": 157.63773917665077,
      "y": 504,
      "z": 500.84227394129766,
    },
    "path": "/root/folder_6/children_12",
    "visible": true,
    "width": 422.4283895226556,
    "x0": 90.81644703465908,
    "y0": 750.8422739412977,
    "z0": 4,
  },
]
`;
